<resources>
    <string name="app_name">YoHoliday</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_fragment">Login fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="register_fragment">Register Fragment</string>
    <string name="register_success_fragment">Register Success Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="notification_fragment">Notification Fragment</string>

    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_proceed">Proceed</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_profile">Profile</string>
    <string name="btn_notification">Notification</string>

    <string name="session_start">Session Start</string>
    <string name="session_end">Session End</string>
    <string name="login_fragment_desc">Login into app to use more feature</string>
    <string name="register_fragment_description">Register to get more feature.</string>
    <string name="profile_fragment_description">Your Basic Information</string>
    <string name="notification_fragment_description">Your Notification List</string>
    <string name="dashboard_fragment_description">Welcome to dashboard</string>
    <string name="register_success_fragment_description">Congratulation, You are sucessfully registered in our family.</string>
    <string name="log_event">Log Event</string>
</resources>