<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.dashboard.DashboardFragment">

    <include
        android:id="@+id/localToolbar"
        layout="@layout/custom_toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/dashboard_fragment_description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNavProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="48dp"
        android:text="@string/btn_profile"
        android:theme="@style/ButtonTheme" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNAvNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/btn_notification"
        android:theme="@style/ButtonTheme" />

</LinearLayout>