<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.register.RegisterSuccessFragment">

    <include
        android:id="@+id/localToolbar"
        layout="@layout/custom_toolbar" />

    <TextView
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_success_fragment_description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegisterSuccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:theme="@style/ButtonTheme"
        android:layout_marginTop="48dp"
        android:text="@string/btn_confirm" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSessionEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:theme="@style/ButtonTheme"
        android:layout_marginTop="48dp"
        android:text="@string/session_end" />

</LinearLayout>